<resources>
    <string name="app_name">Template App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section">Section</string>
    <string name="title">Title</string>
    <string name="clicked_position">clicked_position</string>
    <string name="collection_list_size">collection_list_size</string>
    <string name="read_story">Read Story</string>
    <string name="oops">Oops… \n Something went wrong! Please try again!</string>
    <string name="no_stories_found">Oops… \n No stories found!</string>
    <string name="no_internet">Please check your Internet connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="home_title">HOME</string>
    <string name="copyright_text">© Copyright 2018 - Quintype</string>
    <string name="notification_title">NOTIFICATION</string>
    <string name="summary">Summary</string>
    <string name="q_text_placeholder">Q</string>
    <string name="a_text_placeholder">A</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="frameless_html_css">&lt;html>&lt;style>body {margin: 0;} iframe {box-shadow:none !important;}&lt;/style>&lt;body>replace&lt;/body>&lt;/html></string>
    <string name="soundcloud_html">&lt;style> body {margin:0;} &lt;/style>&lt;iframe width="100%" scrolling="yes" frameborder="no" src="replace">&lt;/iframe></string>

    <string name="also_read">Also read</string>
    <string name="select_entries">Select number of entries:</string>
    <string name="search_hint">Search</string>
    <string name="empty_data">No entries found</string>
    <string name="table_entry_count">Displaying %1$d to %2$d entries</string>

    <!-- Twitter Keys for staging env-->
    <string name="twitter_consumer_key">xZM7OR43sZW7Qcw59ZQQBvbUp</string>
    <string name="twitter_consumer_secret">xPIh3ZVFCpwW71rQxhcGNvbgi2ERld1fRxuSnV0Vx3bzFesxBC</string>

    <!-- Facebook Keys for staging env-->
    <string name="youtube_key">AIzaSyBk7kGIL9ScotWobkZ0FqySe2Q1vqcvoN8</string>
    <string name="tags">Tags</string>
    <string name="author_name">Author name</string>
    <string name="no_of_stories">Stories count : </string>
    <string name="story_by">Story by</string>
    <string name="stories_by">Stories by</string>
    <string name="recent_search">Recent search</string>
    <string name="no_recent_search">Your search history is empty!!</string>
    <string name="speech_not_supported">Your device dont support speech</string>
    <string name="empty_search_term">Search something!!</string>
    <string name="coming_soon">Coming soon</string>


    <string name="native_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <!--<string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>-->
    <string name="admob_app_id">ca-app-pub-1138107191663281~8718926729</string>

    <string name="quintype_link_placeholder">Powered by Quintype</string>
    <string name="disclaimer_link_placeholder">Privacy Policy</string>

    <string name="disclaimer_link_text"><![CDATA[https://www.quintype.com/privacy-policy]]></string>
    <string name="quintype_link_text"><![CDATA[http://www.quintype.com]]></string>
</resources>
