<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/size_10dp">

    <TextView
        android:id="@+id/quintype_link_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/size_4dp"
        android:padding="@dimen/size_2dp"
        android:paddingTop="@dimen/size_16dp"
        android:text="@string/quintype_link_placeholder"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textSize="@dimen/size_14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/disclaimer_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/size_4dp"
        android:padding="@dimen/size_2dp"
        android:text="@string/disclaimer_link_placeholder"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textSize="@dimen/size_14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/size_4dp"
        android:padding="@dimen/size_2dp"
        android:text="@string/copyright_text"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/size_14sp" />
</LinearLayout>