<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.CardView
        android:id="@+id/search_list_fragment_cv_search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/size_16dp">

        <LinearLayout
            android:id="@+id/search_list_fragment_ll_search_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/search_list_fragment_iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_8dp"
                android:rotation="180"
                app:srcCompat="@drawable/ic_arrow" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/search_list_fragment_tet_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:hint="@string/search_hint"
                android:imeOptions="actionDone"
                android:inputType="textAutoComplete" />

            <ImageView
                android:id="@+id/search_list_fragment_iv_voice_search"
                android:layout_width="@dimen/size_50dp"
                android:layout_height="@dimen/size_50dp"
                android:padding="@dimen/size_8dp"
                app:srcCompat="@drawable/ic_voice_search" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/search_list_fragment_ll_recent_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/size_8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/search_list_fragment_cv_search_container">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/recent_search"
            android:textSize="@dimen/size_20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/size_30dp"
            android:layout_height="@dimen/size_30dp"
            android:padding="@dimen/size_5dp"
            app:srcCompat="@drawable/ic_delete" />

    </LinearLayout>

    <TextView
        android:id="@+id/search_list_fragment_tv_no_recent_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:text="@string/no_recent_search"
        android:textSize="@dimen/size_20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_list_fragment_ll_recent_search" />

    <LinearLayout
        android:id="@+id/search_list_fragment_fl_main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_2dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/search_list_fragment_ll_recent_search">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/search_list_fragment_swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/search_list_fragment_rv_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />
        </android.support.v4.widget.SwipeRefreshLayout>

        <include layout="@layout/retry_layout" />

        <ProgressBar
            android:id="@+id/search_list_fragment_pb_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="visible" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>