<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/story_hero_image_author_view_holder_ll_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/story_hero_image_author_view_holder_tv_section_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:paddingLeft="@dimen/size_8dp"
            android:paddingTop="@dimen/size_8dp"
            android:paddingRight="@dimen/size_8dp"
            android:paddingBottom="@dimen/size_4dp"
            android:text="@string/section"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size_16sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_4dp"
            android:layout_marginLeft="@dimen/size_8dp"
            android:layout_marginRight="@dimen/size_8dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@+id/story_hero_image_author_view_holder_tv_section_name" />
    </LinearLayout>

    <TextView
        android:id="@+id/story_hero_image_author_view_holder_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8dp"
        android:ellipsize="end"
        android:fontFamily="monospace"
        android:maxLines="3"
        android:paddingLeft="@dimen/size_8dp"
        android:text="@string/title"
        android:textColor="@color/theme_secondary_color"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/story_hero_image_author_view_holder_ll_section" />

    <quintype.com.templatecollectionwithrx.utils.widgets.CustomRatingBar
        android:id="@+id/story_hero_image_author_view_holder_item_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_25dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:isIndicator="true"
        android:paddingLeft="@dimen/size_8dp"
        android:visibility="gone"
        app:halfStars="true"
        app:layout_constraintTop_toBottomOf="@+id/story_hero_image_author_view_holder_tv_title"
        app:maxStars="5"
        app:onlyForDisplay="true"
        app:starPadding="@dimen/size_2dp" />

    <LinearLayout
        android:id="@+id/story_hero_image_author_view_holder_main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/story_hero_image_author_view_holder_item_rating_bar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/story_hero_image_author_view_holder_iv_author_icon"
            android:layout_width="@dimen/size_50dp"
            android:layout_height="@dimen/size_50dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/size_8dp"
            android:src="@color/colorAccent"
            android:visibility="gone"
            app:civ_border_color="@color/theme_secondary_color"
            app:civ_border_width="@dimen/size_1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@+id/author_image_row_iv_author_icon">

            <TextView
                android:id="@+id/story_hero_image_author_view_holder_tv_author_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/size_8dp"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_marginRight="@dimen/size_8dp"
                android:layout_marginBottom="@dimen/size_4dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="cursive"
                android:gravity="center|left"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/theme_secondary_color"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/story_hero_image_author_view_holder_tv_published_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/size_8dp"
                android:layout_marginTop="@dimen/size_4dp"
                android:layout_marginRight="@dimen/size_8dp"
                android:layout_marginBottom="@dimen/size_8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/theme_secondary_color"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>